--- a/index.html
+++ b/index.html
@@ -1,26 +1,103 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Iron Pulse Fitness</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<!-- NAVBAR -->
+<nav class="navbar">
+  <div class="logo">IRON <span>PULSE</span></div>
+  <ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#services">Programs</a></li>
+    <li><a href="#plans">Plans</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
+
+<!-- HERO -->
+<section class="hero" id="home">
+  <div class="hero-content">
+    <h1>UNLEASH YOUR <span>STRONGEST</span> VERSION</h1>
+    <p>Build Strength. Build Discipline. Build Life.</p>
+    <button>Join Now</button>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section class="about" id="about">
+  <h2>About Us</h2>
+  <p>
+    Iron Pulse Fitness is not just a gym, it’s a transformation zone.
+    We focus on real results, discipline, and strength.
+  </p>
+</section>
+
+<!-- SERVICES -->
+<section class="services" id="services">
+  <h2>Our Programs</h2>
+  <div class="service-box">
+    <div class="card">💪 Strength Training</div>
+    <div class="card">🔥 Fat Loss</div>
+    <div class="card">🏃 Cardio</div>
+    <div class="card">🧘 Yoga</div>
+    <div class="card">🥊 Boxing</div>
+    <div class="card">🧑‍🏫 Personal Training</div>
+  </div>
+</section>
+
+<!-- PLANS -->
+<section class="plans" id="plans">
+  <h2>Membership Plans</h2>
+  <div class="plan-box">
+    <div class="plan">
+      <h3>Basic</h3>
+      <p>₹999 / month</p>
+      <button>Join</button>
+    </div>
+    <div class="plan popular">
+      <h3>Standard</h3>
+      <p>₹1499 / month</p>
+      <button>Join</button>
+    </div>
+    <div class="plan">
+      <h3>Premium</h3>
+      <p>₹2999 / month</p>
+      <button>Join</button>
+    </div>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section class="contact" id="contact">
+  <h2>Contact Us</h2>
+  <p>📍 New Delhi, India</p>
+  <p>📞 +91 98765 43210</p>
+  <p>📧 ironpulse@gmail.com</p>
+</section>
+
+<footer>
+  © 2026 Iron Pulse Fitness
+</footer>
+
+<script src="script.js"></script>
+</body>
+</html><!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Snake Game</title>
-	<link rel="stylesheet" href="style.css">
+  <title></title>
 </head>
+
 <body>
-	<div id="game-container">
-		<canvas id="gc" class="game-canvas" width="400" height="400"></canvas>
-	</div>
-	<div class="keys">
-	  <a class="up arr" onclick="Snake.action('up')">
-	    <i class="chevron up"></i></a>
-	  <br />
-	  <a class="left arr" onclick="Snake.action('left')">
-	    <i class="chevron left"></i></a>
-	  <a class="down arr" onclick="Snake.action('down')">
-	    <i class="chevron down"></i></a>
-	  <a class="right arr" onclick="Snake.action('right')">
-	    <i class="chevron right"></i></a>
-	</div>
-	<script type="text/javascript" src="game.js"></script>
+  
 </body>
+
 </html>
